--- a/app/src/main/res/layout/activity_informacion.xml
+++ b/app/src/main/res/layout/activity_informacion.xml
@@ -29,9 +29,10 @@
                 android:id="@+id/info"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
-                android:layout_marginStart="4dp"
+                android:autoLink="web"
                 android:text="Se puede conseguir hasta un 60% de ahorro de energía con un adecuado aislamiento en techos y
 muros. Instalando toldos, aleros o persianas en las ventanas donde da el sol, reducís aún más el uso del aire
 acondicionado en verano. La tecnología Inverter permite al equipo variar su frecuencia y regular el ciclo eléctrico reduciendo el
@@ -76,21 +77,24 @@ La posición de ventilación permite ahorrar energía."
                 android:id="@+id/tablaConsumos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:autoLink="none"
+                android:gravity="center"
                 android:text="   TABLA DE CONSUMOS DE ARTEFACTOS ELÉCTRICOS "
                 android:textColor="@android:color/holo_red_dark"
-                android:gravity="center"
                 android:textSize="15sp"
-                android:layout_marginTop="15dp"/>
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/leer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
                 android:text=" COMO LEER SU FACTURA "
                 android:textColor="@android:color/holo_red_dark"
-                android:gravity="center"
                 android:textSize="15sp"
-                android:layout_marginTop="15dp"/>
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:layout_width="match_parent"
