--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,17 +8,6 @@
     android:background="@mipmap/img_enre"
     tools:context=".SplashActivity">
 
-       <!-- <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="BIENVENIDOS"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="170dp"
-        android:gravity="center"
-        android:textSize="21sp"
-        android:textStyle="bold" /> -->
-
     <ImageView
         android:id="@+id/logo"
         android:layout_width="180dp"
@@ -34,11 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="PRUEBA ENRE"
+        android:text="CONTROLA TU CONSUMO"
         android:textColor="?android:attr/editTextColor"
         android:textSize="21sp"
         android:textStyle="bold" />
-
-
 
 </LinearLayout>
