--- a/app/src/main/res/layout/activity_mis_consumos.xml
+++ b/app/src/main/res/layout/activity_mis_consumos.xml
@@ -6,12 +6,20 @@
     android:layout_height="match_parent"
     android:background="@mipmap/img_enre"
     android:orientation="vertical"
-    tools:context=".MisConsumosActivity">
+    android:visibility="visible"
+    tools:context="app1.control.maria.prueba.MisConsumosActivity">
 
-    <ListView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/lista">
-    </ListView>
+        android:layout_height="wrap_content"
+        android:text="   ID  | Consumo KWH |   Importe  |   Fecha  "
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+    <ListView
+        android:id="@+id/lista"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"></ListView>
 
 </LinearLayout>
