--- a/app/src/main/res/layout/imagen_estado_actual.xml
+++ b/app/src/main/res/layout/imagen_estado_actual.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/facturamain"
+        android:src="@mipmap/factura_main"
         android:layout_gravity="center"/>
 
 </LinearLayout>
