--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,27 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@mipmap/img_enre"
-    tools:context=".SplashActivity">
+    android:background="#FFFFFF"
+    tools:context="app1.control.maria.prueba.SplashActivity">
+
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:src="@mipmap/logo" />
 
-    <TextView
-        android:id="@+id/textView"
+
+    <ImageView
+        android:id="@+id/energia"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:gravity="center"
-        android:text="CONTROLA TU CONSUMO"
-        android:textColor="?android:attr/editTextColor"
-        android:textSize="21sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:src="@mipmap/splash_enre1" />
+
 
 </LinearLayout>
