--- a/app/src/main/res/layout/imagen_medidor.xml
+++ b/app/src/main/res/layout/imagen_medidor.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/medidor2"
-        android:layout_gravity="center"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:src="@mipmap/medidor2" />
 
 </LinearLayout>
