--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <item
         android:id="@+id/opcion1"
-        android:title="Información" />
+        android:title="Información"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/opcion2"
-        android:title="Mis Consumos" />
+        android:title="Mis Consumos"
+        app:showAsAction="never"/>
 
-    <item android:id="@+id/opcion3"
-        android:title="Ayuda" />
+    <item
+        android:id="@+id/opcion3"
+        android:title="Ayuda"
+        app:showAsAction="never"/>
 
-
+    <item
+        android:id="@+id/opcion4"
+        android:title="Acerca"
+        app:showAsAction="never"/>
 
 </menu>
