--- a/app/src/main/res/menu/mis_consumos.xml
+++ b/app/src/main/res/menu/mis_consumos.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/borrar" android:title="Borrar"
+        android:icon="@mipmap/borrar"
+        app:showAsAction="always"/>
 
 </menu>
