--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9eedfb</color>
-    <color name="colorPrimaryDark">#7580d4</color>
+    <color name="colorPrimary">#3e4141</color>
+    <color name="colorPrimaryDark">#81f30e</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
