--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/usuario"
             android:layout_width="wrap_content"
@@ -20,7 +21,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_weight="0.1"
-            android:text="USUARIO:"
+            android:text="Tipo de USUARIO:"
             android:textColor="@android:color/black"
             android:textSize="17dp"
             android:textStyle="bold" />
@@ -30,7 +31,7 @@
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_weight="0.1"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
@@ -52,23 +53,22 @@
             android:textSize="17dp" />
     </RadioGroup>
 
-
     <TextView
         android:id="@+id/anterior"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:text="Ingrese el Valor del Estado Actual que figura en la última factura recibida:"
         android:textColor="@android:color/black"
         android:textSize="17dp"
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -78,7 +78,7 @@
             android:layout_gravity="bottom"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="          PULSE\n    REFERENCIA \n ESTADO ACTUAL"
+            android:text="    INGRESE AQUI\n    REFERENCIA \n ESTADO ACTUAL"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="10dp"
             android:textStyle="bold|italic" />
@@ -94,6 +94,7 @@
             android:background="@color/colorPrimaryDark"
             android:ems="5"
             android:gravity="center"
+            android:hint="Est. Actual"
             android:inputType="number"
             android:textSize="30sp"
             android:textStyle="bold|italic" />
@@ -106,7 +107,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="[KWh]"
+            android:text="[kWh]"
             android:textColor="@android:color/black"
             android:textSize="20dp"
             android:textStyle="bold|italic" />
@@ -117,14 +118,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Ingrese el Valor que figura en el Medidor:"
         android:textColor="@android:color/black"
         android:textSize="17dp"
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
@@ -137,7 +138,7 @@
             android:layout_gravity="bottom"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="       PULSE\n  REFERENCIA \n     MEDIDOR"
+            android:text="  INGRESE AQUI\n  REFERENCIA \n  DEL MEDIDOR"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="10dp"
             android:textStyle="bold|italic" />
@@ -153,6 +154,7 @@
             android:background="@color/colorPrimaryDark"
             android:ems="5"
             android:gravity="center"
+            android:hint="Est. Medidor"
             android:inputType="number"
             android:textSize="30sp"
             android:textStyle="bold|italic" />
@@ -165,18 +167,17 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="[KWh]"
+            android:text="[kWh]"
             android:textColor="@android:color/black"
             android:textSize="20dp"
             android:textStyle="bold|italic" />
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -202,75 +203,72 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="2dp"
         android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/kwh"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+            android:layout_height="47dp"
+            android:layout_gravity="left"
             android:gravity="center"
-            android:text="Consumo [KWH]: "
+            android:text="Consumo [kWh]:"
             android:textColor="@color/colorPrimary"
-            android:textSize="22sp"
+            android:textSize="21sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/resultadokwh"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:layout_marginLeft="5dp"
             android:cursorVisible="false"
             android:focusable="auto"
             android:focusableInTouchMode="false"
             android:gravity="start"
             android:onClick="calcular"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="6dp"
         android:layout_weight="1"
-        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/resulCosto"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
             android:gravity="center"
-            android:text="Importe Estimado : "
+            android:text="Importe Estimado [$] :\n (Por Factura)"
             android:textColor="@color/colorPrimary"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/resultado"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="185dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:layout_marginLeft="5dp"
             android:cursorVisible="false"
             android:focusable="auto"
             android:focusableInTouchMode="false"
             android:gravity="start"
             android:onClick="calcular"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
@@ -278,14 +276,14 @@
 
         <TextView
             android:id="@+id/costoParcial"
-            android:layout_width="wrap_content"
-            android:layout_height="37dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginVertical="40dp"
             android:gravity="center"
             android:text="Cargos Fijos MENSUALES:\nRESIDENCIAL: $ 450,84 - COMERCIAL: $ 1.598,93"
             android:textColor="@android:color/black"
-            android:textSize="13sp" />
+            android:textSize="10sp" />
     </LinearLayout>
 
 </LinearLayout>
